--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Dave Gray",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
+    "express": "^4.17.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
